fix for fr/fi (and probably more) on the index, details about the four fundations are too closer to their links.

--- a/fedoraproject.org/static/css/fedora960.css
+++ b/fedoraproject.org/static/css/fedora960.css
@@ -553,7 +553,7 @@ h4.main-section-hl { font-size: small; }
 }
 
 #four-fs p {
-  height: 4.5em;
+  min-height: 5em;
 }
 
 /* what can you do with fedora front page section */
